# Competitive-Programming

./: CMakeLists.txt  main.cpp
Codeforces/: 2026C.cpp  2027C.cpp  2033.cpp  2033C.cpp  296C.cpp  371B.cpp  371C.cpp  437B.cpp  518B.cpp  546C.cpp  621C.cpp  651C.cpp  740C.cpp  75C.cpp  UVAMarcus.cpp
Leetcode/: 2415. Reverse Odd Levels of Binary Tree.py  2471. Minimum Number of Operations to Sort a Binary Tree by Level.py
SPOJ/: BITMAP.cpp
Silver/: Feb_2017_2.cpp  Open_2017_1.cpp
UVA/Greedy/: UVA00410.cpp  UVA01193.cpp  UVA10020.cpp  UVA10382.cpp  UVA11264.cpp
UVA/Random/: UVA10168.cpp  UVA10394.cpp  UVA10469.cpp
