cmake_minimum_required(VERSION 3.29)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 17)


add_executable(UVA410 UVA/Greedy/UVA00410.cpp)
add_executable(UVA1193 UVA/Greedy/UVA01193.cpp)
add_executable(UVA10020 UVA/Greedy/UVA10020.cpp)
add_executable(UVA10382 UVA/Greedy/UVA10382.cpp)
add_executable(UVA11264 UVA/Greedy/UVA11264.cpp)

add_executable(2033 Codeforces/2033.cpp)