cmake_minimum_required(VERSION 3.29)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 17)


add_executable(UVA410 UVA/Greedy/UVA00410.cpp)
add_executable(UVA1193 UVA/Greedy/UVA01193.cpp)
add_executable(UVA10020 UVA/Greedy/UVA10020.cpp)
add_executable(UVA10382 UVA/Greedy/UVA10382.cpp)
add_executable(UVA11264 UVA/Greedy/UVA11264.cpp)

add_executable(2033C Codeforces/2033C.cpp)
add_executable(2026C Codeforces/2026C.cpp)
add_executable(303A Codeforces/303A.cpp)
add_executable(651C Codeforces/651C.cpp)
add_executable(371B Codeforces/371B.cpp)
add_executable(UVA10394 UVA/Random/UVA10394.cpp)
add_executable(UVA10168 UVA/Random/UVA10168.cpp)
add_executable(437B Codeforces/437B.cpp)
add_executable(371C Codeforces/371C.cpp)
add_executable(518B Codeforces/518B.cpp)
add_executable(BITMAP SPOJ/BITMAP.cpp)
add_executable(296C Codeforces/296C.cpp)
add_executable(UVA10469 UVA/Random/UVA10469.cpp)
add_executable(75C Codeforces/75C.cpp)
add_executable(740C Codeforces/740C.cpp)